--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "dependencies": {
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "@reduxjs/toolkit": "^1.6.1",
+    "axios": "^0.21.4",
+    "react-hook-form": "^7.15.3",
+    "react-redux": "^7.2.5"
   },
   "devDependencies": {
     "@types/react": "17.0.27",
@@ -20,7 +24,9 @@
     "eslint-config-next": "11.1.2",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.4.1",
-    "typescript": "4.4.3"
+    "typescript": "4.4.3",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-redux": "^7.1.18"
   },
   "prettier": {
     "trailingComma": "all",
