--- a/package.json
+++ b/package.json
@@ -10,23 +10,27 @@
     "format": "prettier --write --ignore-path .gitignore ./**/*.{js,jsx,ts,tsx,json,css}"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.1",
+    "axios": "^0.21.4",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "@reduxjs/toolkit": "^1.6.1",
-    "axios": "^0.21.4",
     "react-hook-form": "^7.15.3",
     "react-redux": "^7.2.5"
   },
   "devDependencies": {
     "@types/react": "17.0.27",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-redux": "^7.1.18",
+    "autoprefixer": "^10.3.7",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-tailwindcss": "^1.16.1",
+    "postcss": "^8.3.9",
     "prettier": "^2.4.1",
-    "typescript": "4.4.3",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-redux": "^7.1.18"
+    "tailwindcss": "^2.2.16",
+    "typescript": "4.4.3"
   },
   "prettier": {
     "trailingComma": "all",
