--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,3 @@
 {
-  "extends": ["next", "next/core-web-vitals", "prettier", "plugin:tailwindcss/recommended"]
+  "extends": ["next", "next/core-web-vitals", "plugin:tailwindcss/recommended", "prettier"]
 }
