--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "semi": true,
     "singleQuote": true,
     "jsxSingleQuote": true,
-    "printWidth": 100
+    "printWidth": 80,
+    "endOfLine": "auto"
   }
 }
